--- a/home/templates/dashboard/add_attendance.html
+++ b/home/templates/dashboard/add_attendance.html
@@ -1,92 +1,95 @@
 {%  extends "home/main_dashboard.html" %}
 
 {% block dashboard %}
-<h1>{{sem1.subject_name}}</h1>
+
 {% for i in sem1 %}
+	<!-- {{ value|stringformat:"i" }} -->
+	<h2>Sem 1</h2>
 	<div class='container'>
+
 	<h1>{{i.subject_name}}</h1>
-	<a href={% url 'attendance:add_attendance_sem' 1 %}>link</a>
+	<strong>{{i.professer_name}}</strong>
+
 	</div>
-	<hr/>
-{% endfor %}
-{% comment %} 
-{% for i in sem1 %}
-	<div class='container'>
-	<h1>{{i.subject_name}}</h1>
-	</div>
-	<a href={% url 'attendance:add_attendance_sem' i.subject_code %}>link</a>
+	<a href={% url 'attendance:add_attendance_sem_1' id=i.subject_code %}>link</a>
 	<hr/>
 
 {% endfor %}
 
 {% for i in sem2 %}
+	<h2>Sem 2</h2>
 	<div class='container'>
+	<strong>{{data.username}}</strong>
 	<h1>{{i.subject_name}}</h1>
+	<strong>{{i.professer_name}}</strong>
 	</div>
-	<a href={% url 'attendance:add_attendance_sem' i.subject_code %}>link</a>
+	<a href={% url 'attendance:add_attendance_sem_2' i.subject_code %}>link</a>
 	<hr/>
 
 {% endfor %}
 
 {% for i in sem3 %}
+	<h2>Sem 3</h2>
 	<div class='container'>
+	<strong>{{data.username}}</strong>
 	<h1>{{i.subject_name}}</h1>
-	<a href={% url 'attendance:add_attendance_sem' i.subject_code %}>link</a>
+	<a href={% url 'attendance:add_attendance_sem_3' i.subject_code %}>link</a>
 	</div>
 	<hr/>
 
 {% endfor %}
 
 {% for i in sem4 %}
+	<h2>Sem 4</h2>
 	<div class='container'>
+	<strong>{{data.username}}</strong>
 	<h1>{{i.subject_name}}</h1>
-	<a href={% url 'attendance:add_attendance_sem' i.subject_code %}>link</a>
+	<a href={% url 'attendance:add_attendance_sem_4' i.subject_code %}>link</a>
 	</div>
 	<hr/>
 
 {% endfor %}
 
 {% for i in sem5 %}
+	<h2>Sem 5</h2>
 	<div class='container'>
+	<strong>{{data.username}}</strong>
 	<h1>{{i.subject_name}}</h1>
-	<a href={% url 'attendance:add_attendance_sem' i.subject_code %}>link</a>
+	<a href={% url 'attendance:add_attendance_sem_5' i.subject_code %}>link</a>
 	</div>
 	<hr/>
 
 {% endfor %}
 
 {% for i in sem6 %}
+	<h2>Sem 6</h2>
 	<div class='container'>
+	<strong>{{data.username}}</strong>
 	<h1>{{i.subject_name}}</h1>
-	<a href={% url 'attendance:add_attendance_sem' i.subject_code %}>link</a>
+	<a href={% url 'attendance:add_attendance_sem_6' i.subject_code %}>link</a>
 	</div>
 	<hr/>
-{% endfor %}
-
-{% for i in sem6 %}
-	<div class='container'>
-	<h1>{{i.subject_name}}</h1>
-	<a href={% url 'attendance:add_attendance_sem' i.subject_code %}>link</a>
-	</div>
-	<hr/>
-
 {% endfor %}
 
 {% for i in sem7 %}
+	<h2>Sem 7</h2>
 	<div class='container'>
+	<strong>{{data.username}}</strong>
 	<h1>{{i.subject_name}}</h1>
-	<a href={% url 'attendance:add_attendance_sem' i.subject_code %}>link</a>
+	<a href={% url 'attendance:add_attendance_sem_7' i.subject_code %}>link</a>
 	</div>
 	<hr/>
 
 {% endfor %}
 
 {% for i in sem8 %}
+	<h2>Sem 8</h2>
 	<div class='container'>
+	<strong>{{data.username}}</strong>
 	<h1>{{i.subject_name}}</h1>
-	<a href={% url 'attendance:add_attendance_sem' i.subject_code %}>link</a>
+	<a href={% url 'attendance:add_attendance_sem_8' i.subject_code %}>link</a>
 	</div>
-{% endfor %} {% endcomment %}
+{% endfor %}
 
 {% comment %} 
 <form method="post" action="{% url 'attendance:today_attendance' %}">
@@ -104,7 +107,7 @@
 			<tr>
 				<td>{{ students.id }}</td>
 				<td>{{ students.name }}</td>
-				<td><label class="add_student_attendance"><input class="add_student_ckbx" type="checkbox" name="present[]" value="{{ students.id }}" >&nbsp; <span>Absent</span></label></td>
+				<td><label class="add_student_attendance"><input class="add_student_ckbx" type="checkbox" name="present[]" value="{{students.id}}" >&nbsp; <span>Absent</span></label></td>
 				<!-- <td><label><input type="radio" name="attendance{{ students.id }}" value="0" required="">&nbsp; Absent</label></td> -->
 			</tr>
 			{% endfor %}
