--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="text-center">
+<div class="text-center" style="margin: 10rem;padding: 1rem;">
 	<h2>Welcome to Attendance Management System</h2>
 	{% if 'faculty' in request.session %}
 	<h3><a class=" btn btn-warning" href="{% url 'home:dashboard' %}">Dashboard</a></h3>
@@ -10,7 +10,7 @@
 	<h3><a class=" btn btn-warning" href="{% url 'home:dashboard' %}">Dashboard</a></h3>
 	{% else %}
 	<p>Click on login to begin</p>
-	<p class="login_btns"><span class="studnt_login btn btn-danger" data-toggle="modal" data-target="#student_login_modl">I am a student</span><span class="faculty_login btn btn-warning" data-toggle="modal" data-target="#faculty_login">I am a faculty</span></p>
+	<p class="login_btns"><span style="margin: 1rem;"class="studnt_login btn btn-danger" data-toggle="modal" data-target="#student_login_modl">I am a student</span><span class="faculty_login btn btn-warning" data-toggle="modal" data-target="#faculty_login">I am a faculty</span></p>
 	{% endif %}
 </div>
 
@@ -21,7 +21,6 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Faculty Login</h4>
       </div>
       <div class="modal-body">
@@ -56,15 +55,14 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Faculty Login</h4>
+        <h4 class="modal-title">Student Login</h4>
       </div>
       <div class="modal-body">
         <form method="post" id="stdnt_logn_form" action="{% url 'home:student_login' %}">
     		{% csrf_token %}
 			<p id="stdnt_logn_form_error"></p>
 		  <div class="form-group">
-			<label for="pwd">University Roll No:</label>
+			<label for="pwd">Roll No:</label>
 		    <input type="text" id="stdnt_logn_rollno" class="form-control" name="univ_rlno">
 		  </div>
 		  <div class="form-group">
