--- a/home/templates/dashboard/view_student_attendance.html
+++ b/home/templates/dashboard/view_student_attendance.html
@@ -1,13 +1,29 @@
 {%  extends "home/header.html" %}
 
+{% block searching %}
+
+{% endblock %}
+
 {% block dashboard %}
 
 <!-- <p class="add_stdnt"><a href="javascript:void(0)" class="add_new_student btn btn-default">Add Student</a></p> -->
 
 <!-- {% with i=1 %} -->
 <div class="container" style="padding: 1rem;">
+<div class="row">
+	<form class="form-inline" method="post" action="{% url 'attendance:faculty_search_view_attendence' sem prog sub%}" >
+		{% csrf_token %}
+			<select class="custom-select" id="inputGroupSelect01" name="present[]" style="margin:1rem;">
+			<option value="30">30%</option>
+			<option value="75">75%</option>
+			<option value="90">90%</option>
+			</select>
+			<button style="margin:1rem;" class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+	</form>
+</div>
+<div  class="row">
 
-<table class="table table-hover bg-light bg-light text-dark">
+<table  class="table table-hover bg-light bg-light text-dark">
 	<thead>
 		<tr>
 			<th>S No.</th>
@@ -31,6 +47,7 @@
 		{% endfor %}
 	</tbody>
 </table>
+</div>
 </div>
 <!-- {% endwith %} -->
 {% endblock %}
