--- a/home/templates/home/header.html
+++ b/home/templates/home/header.html
@@ -13,6 +13,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <img class="logo" src="http://iiitv.github.io/college_website/img/IIITV_Logo_1x1_small.png" alt="..." style="width:3%;margin-right:10px;">
   <a class="navbar-brand" href="/">IIITV</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
