--- a/home/templates/home/header.html
+++ b/home/templates/home/header.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="favicon/ico" href="http://iiitvadodara.ac.in/img/New-Logo.png">
+    
     <title>Attendance</title>
   </head>
   <body>
